# aegis

./: .gitignore  README.md
Engine/: CMakeLists.txt  CMakeSettings.json  CppProperties.json
Engine/Source/: AegisEngineStartup.cpp
Engine/Source/Public/: Camera.hpp  Context.hpp  Context_GLFW3.hpp  Context_SDL2.hpp  Controller.hpp  CoreMinimal.hpp  EventManager.hpp  LuaController.hpp  Object.hpp  Shader.hpp  TextRenderer.hpp  ThirdPersonCamera.hpp
Engine/cmake/: FindExternalLibraries.cmake
Sandbox/: Engine_Win32.lib  Sandbox.lua
Sandbox/Data/Fonts/Roboto/: Roboto.tps
Sandbox/Data/Modules/: colors.lua  core.lua  events.lua  hints.lua  keys.lua  main.lua  timer.lua
Sandbox/Data/Modules/npc/: guard.lua  healer.lua
